--- a/src/components/Burger/BuildControls/BuildControls.module.css
+++ b/src/components/Burger/BuildControls/BuildControls.module.css
@@ -3,6 +3,7 @@
     display: flexbox;
     flex-flow: column;
     align-items: center;
+    text-align: center;
     box-shadow: 0 2px 1px #ccc;
     margin: auto;
     padding: 10px 0;
